--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+spring.application.name=enrollment-services
+server.port=8085
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+
+#datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/moddb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.main.web-application-type=none
+spring.jpa.hibernate.ddl-auto=none
+
+#liquibase
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+#eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+#indicates the frequency the client sends heartbeat to server to indicate that it is alive.
+eureka.instance.lease-renewal-interval-in-seconds=30
+#incicates the duration the server waits since it received the last heartbeat before it can evict an instance from its registry
+eureka.instance.lease-expiration-duration-in-seconds=90
+
+#load balancing
+ribbon.eureka.enabled=true
+
+spring.main.allow-bean-definition-overriding=true
 
