Openfeign COnfiguration while creating enrollments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ eureka.instance.lease-expiration-duration-in-seconds=90
 
 #load balancing
 ribbon.eureka.enabled=true
+feign.client.default-config=localhost:8765/api/search
 
 spring.main.allow-bean-definition-overriding=true
 
